/// **앱 테마 설정 값**
abstract class AppThemeMode {
  static const String kSystem = '시스템 설정';
  static const String kLight = '화이트';
  static const String kDark = '다크';
}
