...
 * Author: Junho Kim
 * Latest Updated Date: 2026-02-19
 */

abstract class CustomTabPolicy {
  static const List<String> kDefaultTabs = [
    '학사',
    '학과',
    '장학',
    '모집/채용',
    '정석',
    '국제처',
    'SW중심대학사업단',
...
